--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "vite",
+    "start:local": "cross-env MOCK=none vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
@@ -27,7 +28,10 @@
     "@types/react": "^18.0.38",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
+    "cross-env": "^7.0.3",
+    "mockjs": "^1.1.0",
     "typescript": "^5.0.4",
-    "vite": "^4.3.1"
+    "vite": "^4.3.1",
+    "vite-plugin-mock": "^2.9.8"
   }
 }
