--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.1",
+    "@mui/x-date-pickers": "^6.3.0",
+    "dayjs": "^1.11.7",
     "lodash": "^4.17.21",
     "notistack": "^3.0.1",
     "qs": "^6.11.1",
