--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/x-date-pickers": "^6.3.0",
     "dayjs": "^1.11.7",
     "lodash": "^4.17.21",
+    "material-ui-confirm": "^3.0.9",
     "notistack": "^3.0.1",
     "qs": "^6.11.1",
     "react": "^18.2.0",
