--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "vite",
     "start:local": "cross-env MOCK=none vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint:ci": "true"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
