--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start:local": "cross-env MOCK=none vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "tsc --noEmit",
-    "lint:ci": "tsc --noEmit"
+    "lint": "eslint --fix . && tsc --noEmit",
+    "lint:ci": "eslint . && tsc --noEmit"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
@@ -35,8 +35,11 @@
     "@types/qs": "^6.9.7",
     "@types/react": "^18.0.38",
     "@types/react-dom": "^18.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "@typescript-eslint/parser": "^5.59.8",
     "@vitejs/plugin-react": "^4.0.0",
     "cross-env": "^7.0.3",
+    "eslint": "^8.41.0",
     "mockjs": "^1.1.0",
     "typescript": "^5.0.4",
     "vite": "^4.3.1",
