--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@vitejs/plugin-react": "^4.0.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.41.0",
+    "eslint-plugin-react": "^7.32.2",
     "mockjs": "^1.1.0",
     "typescript": "^5.0.4",
     "vite": "^4.3.9",
