--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.41.0",
     "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "mockjs": "^1.1.0",
     "typescript": "^5.0.4",
     "vite": "^4.3.9",
