--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
+    "recharts": "^2.6.2",
     "yup": "^1.1.1"
   },
   "devDependencies": {
