--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint --fix . && tsc --noEmit",
-    "lint:ci": "eslint . && tsc --noEmit"
+    "lint:ci": "eslint . && tsc --noEmit",
+    "analyze": "tsc && cross-env ANALYZE=1 vite build && open stats.html"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
@@ -44,6 +45,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "mockjs": "^1.1.0",
+    "rollup-plugin-visualizer": "^5.9.2",
     "typescript": "^5.0.4",
     "vite": "^4.3.9",
     "vite-plugin-mock": "^2.9.8"
