--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "analyze": "tsc && cross-env ANALYZE=1 vite build && open stats.html"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/sortable": "^7.0.2",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@fontsource/roboto": "^4.5.8",
