--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "quark",
   "private": true,
   "version": "0.1.0",
-  "type": "module",
   "scripts": {
     "start": "vite",
     "start:proxy": "cross-env MOCK=none vite",
@@ -42,14 +41,16 @@
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
     "@vitejs/plugin-react": "^4.0.0",
+    "body-parser": "^1.20.2",
+    "chokidar": "^3.6.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.44.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "mockjs": "^1.1.0",
     "rollup-plugin-visualizer": "^5.9.2",
+    "routes": "^2.1.0",
+    "send-data": "^8.0.0",
     "typescript": "^5.0.4",
-    "vite": "^4.5.1",
-    "vite-plugin-mock": "^2.9.8"
+    "vite": "^4.5.1"
   }
 }
